--- a/index.html
+++ b/index.html
@@ -1,32 +1,22 @@
 <!DOCTYPE html>
-<html>
-    <head lang="en-US">
-        <link rel="stylesheet" href="./stylesheets/style.css">
-        <title>i9nn</title>
-        <link rel="icon" type="image/x-icon" href="./images/favicon.ico">
+<html lang="en-US">
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width" />
+        <link rel="stylesheet" href="./src/css/style.css">
+        <link rel="icon" type="image/x-icon" href="./public/assets/peace.png">
+        <title>I9NN</title>
     </head>
 
     <body>
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <header>
-            <div id="title-container">
-                <h1 id="title">i9nn</h1>
-            </div>
-
-            <h2> software developer + <br>front-end developer + graphic designer </h2>
-
-            <div class="button-holder">
-                <a href="stuff/about.html">ABOUT ME</a>
-                <a href="stuff/projects.html">PROJECTS</a>
-                <a target="_blank" rel="noopener noreferrer" href="https://discordapp.com/users/614954208139149319">DISCORD</a>
-            </div>
-        </header>
-
-        <img class="circle-bg" src="./images/background.png">
-        <img class="main-bg blur" src="./images/waves.png">
-
-        <script src="index.js"></script>
+        <main>
+            <img src="./public//assets/peace.png" class="pfg">
+            <img src="./public//assets/peace.png" class="pfg-m">
+            <p class="grad">
+            <h1>PEACE フライゴッド</h1>
+            <h2>i9nn . .. <span>∞</span></h2>
+        </main>
+        
+        <script src="./src/scripts/js/scripts/index.js"></script>
     </body>
 </html>
-
-
