--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width" />
+        <link rel="icon" type="image/x-icon" href="./public/favicon.ico" />
         <title>i9nn.com</title>
     </head>
 
