--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             <div id="card-cont" class="card-cont">
                 <div id="card" class="card">
                     <h1>i9nn</h1>
-                    <h2>web developer, programmer, <br /> graphic / ui designer</h2>
+                    <h2>web developer, programmer, <br /> graphic / uiux designer</h2>
                     <img id="circle"></img>
                 </div>
             </div>
