--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width" />
-        <title>Ian's React Template</title>
+        <title>i9nn.com</title>
     </head>
 
     <body>
